@@ -1,3 +1,8 @@
+2007-07-28 Tom Hughes <tom@compton.nu>
+
+        * t/0signature.t
+          Removed.
+
 2007-07-18 Tom Hughes <tom@compton.nu>
 
 	* Zlib.pm
